# literature-vault-system

./: .gitignore  GETTING_STARTED.md  HANDOFF.md  LICENSE  README.md
.github/workflows/: pages.yml
agent/: CLAUDE.local.md  README.md  container.json.template
docs/: CITATION_KEYS.md  DESIGN.md  KNOWN_LIMITATIONS.md  README.md  VIEWER_HANDOFF.md  build_spec.md
docs/explanation/: citekeys-as-identifiers.md  files-not-database.md  the-agent-pattern.md  two-surfaces-one-vault.md
docs/how-to/: adopt-existing-papers.md  back-up-the-vault.md  connect-telegram.md  install-the-embedding-server.md  install-the-librarian-agent.md  print-a-paper.md  review-student-work.md  (+3 more)
landing/: docs.css  docs.html  index.html  style.css
scripts/: _embed_client.py  append_note.py  batch_file_inbox.py  build_library_bib.py  check_dup.py  crossref_record.py  crossref_search.py  doi2bib.py  embed_corpus.py  embed_models.json  embed_server.py  export_annotated_pdf.py  extract_ids.py  extract_pdf_meta.py  file_paper.py  find_similar.py  manual_file.py  pdf_hash.py  pdf_page_text.py  reassign.py  rename_review_paper.py
setup/: _lib.sh  configure-viewer.sh  init-vault.sh  install-agent.sh  install-embed-server.sh  install-viewer.sh
viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/src-tauri/: Cargo.toml  tauri.conf.json
viewer/src-tauri/capabilities/: default.json
viewer/src-tauri/src/: atomic.rs  collections.rs  export.rs  external.rs  frontmatter.rs  inbox.rs  index.rs  lib.rs  search.rs  session.rs  settings.rs  vault.rs
(+59 files in other folders)
