[package]
name = "viewer"
version = "0.1.0"
description = "Literature Vault Viewer"
authors = ["Henrik Sveinsson"]
edition = "2021"

[lib]
name = "viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
notify = "6"
notify-debouncer-mini = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "sync"] }
tempfile = "3"
dirs = "5"
anyhow = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
